welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not enough arguments for method lireSequence: (T: Array[java.awt.Color])Unit.
Unspecified value parameter T.
	lireSequence();
                    ^